--- a/realestate/src/main/res/values/dimens.xml
+++ b/realestate/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--Navigation-->
+    <dimen name="user_profile_image_size">40dp</dimen>
+
+
 </resources>
