--- a/realestate/src/main/res/layout/content_main.xml
+++ b/realestate/src/main/res/layout/content_main.xml
@@ -26,5 +26,14 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <android.support.v4.widget.ContentLoadingProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:visibility="visible"
+        android:layout_centerInParent="true" />
+
 
 </RelativeLayout>
